2007-04-26  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_instance_init),
	(tny_maemo_conic_device_new): Do all the initialization in init, because 
	_new functions should just call g_object_new() and not access private API, 
	because they are just C convenience functions.
	(on_connection_event), (tny_maemo_conic_device_connect),
	(tny_maemo_conic_device_disconnect),
	(tny_maemo_conic_device_get_iap),
	(tny_maemo_conic_device_get_iap_list),
	(tny_maemo_conic_device_force_online),
	(tny_maemo_conic_device_force_offline),
	(tny_maemo_conic_device_finalize): 
	Copy the iap string instead of just storing the pointer, because we have no 
	guarantees about the lifetime of the string that con_ic_event_get_iap_id() 
	returns. Free it in finalize.
	Added g_return_if*() checks for priv->cnx, without which nothing could work.

2007-04-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* tny_folder_change_set_received_msg,
	tny_folder_change_get_received_msg and
	TNY_FOLDER_CHANGE_CHANGED_MSG_RECEIVED added

	* This was a major API change

2007-04-24 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* Make tinymail/maemo buildable with or without libconic

2007-04-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of the TnyStatus infrastructure
	* Changed the TnyStatusCallback function prototype to reflect the
	TnyStatus changes
	* Updated the demo-ui to start using the TnyStatus infrastructure

	* This was a major API change

2007-04-23 Javier Fernandez Garcia-Boente

	* Change priority flags management, using a bit mask to get assigned priority.
        * New enumeration to define available priority flags. 

2007-04-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Created a TnyGenericSendQueue which implements TnySendQueue in a
	generic way (doesn't strictly depend on the libtinymail-camel impl
	libraries like the TnyCamelSendQueue type)
	* Added the status_callback to tny_folder_get_msg_async